--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   </head>
   <body id="bootstrap-override" onLoad="javascript:preloader()">
   <button onclick="topFunction()" id="Btt" title="Go to top">Back To Top</button>
-   <nav class="navbar navbar-dark navbar-expand-md nav-color nav-border" id="toppage">
+   <nav class="navbar navbar-dark navbar-expand-md nav-color nav-border" id="navbarid">
    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
    <div class="collapse navbar-collapse" id="collapsibleNavbar">
    <ul class="navbar-nav">
-   <li class="nav-item"><a class="nav-link nav-link-color" href="#topsec" onclick="">HOME</a></li>
+   <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#topsec" onclick="topFunction()">HOME</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#aboutsec">ABOUT</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#portfoliosec">PORTFOLIO</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#contactsec">CONTACT</a></li>
