--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="bootstrap/css/custom.css">
     <title>Brandon Loehlein | Web Developer</title>
   </head>
-  <body id="bootstrap-override" onLoad="javascript:preloader()">
+  <body id="bootstrap-override">
   <button onclick="topFunction()" id="Btt" title="Go to top">Back To Top</button>
    <nav class="navbar navbar-dark navbar-expand-md nav-color nav-border" id="navbarid">
    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -80,13 +80,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="js/custom.js"></script>
-	<script language = "JavaScript">
-	function preloader() {
-	heavyImage = new Image(); 
-	heavyImage.src = "..\..\img\bubble.jpg";
-
-}
-
-</script>
   </body>
 </html>
