--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    <ul class="navbar-nav">
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#topsec" onclick="topFunction()">HOME</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#aboutsec">ABOUT</a></li>
+   <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#skillssec">SKILLS</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#portfoliosec">PORTFOLIO</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#contactsec">CONTACT</a></li>
    </ul>
@@ -30,7 +31,7 @@
   <div class="col col-start"><h1>Hi, I'm Brandon Loehlein.</h1>
   <p class="bs-p">I'm a freelance web developer and graphic designer.</p>
   </div>
-  <div class="col col-gen">
+  <div class="col col-gen" id="skillssec">
   <h3 class="h-margin">What I do</h3>
   <div class="div-center">
   <p class="bs-p-concise">I design websites for people as a passion and for fun. I have six years of experience with front-end design, starting in high school and then several years of formal secondary education.<br><br>
