--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="bootstrap/css/custom.css">
-    <title>Brandon Loehlein | Web Developer</title>
+    <title>Brandon Loehlein | Web Designer</title>
   </head>
   <body id="bootstrap-override">
   <button onclick="topFunction()" id="Btt" title="Go to top">Back To Top</button>
@@ -58,15 +58,15 @@
   </div>
   <div class="col col-gen" id="portfoliosec"><h3 class="h-margin">Portfolio</h3>
   <div class="div-center">
-  <p class="bs-p-concise">I don't have much to show on web design, as I'm a recent college graduate and much of my previous work was done from high school - however, I still have something to show!</p>
+  <p class="bs-p-concise">I don't have much to show on web design, as I'm a recent college graduate and much of my previous work was done from high school - however, I still have something to show! Hover over the images below to see the name of each project and my role in the development of them.</p>
   </div>
-  <div class="card card-align fpc-card" style="width: 18rem;">
-  <img src="img\fpc.png" class="card-img-top img-padding-fpc" alt="Picture of the Logo of Fifty Plus Club">
-  <div class="card-body card-body-border">
-    <h5 class="card-title">Fifty Plus Club</h5>
-    <p class="card-text">First web development job; designed in high school for the titular club consisting of Washington High School alumni.</p>
-    <a href="https://50plusclub.neocities.org/" target="_blank" class="btn btn-primary btn-color-p">Site Link</a>
-  </div>
+ <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 hoverdiv">
+    <div class="hovereffect">
+        <img class="img-responsive" src="../Portfolio Website/img/fpcsmall.jpg" alt="">
+        <div class="overlay">
+           <a class="info" href="https://50plusclub.neocities.org/" target="_blank">Washington 50 Plus Club<br><p class="base-p">Website Design</p></a>
+        </div>
+    </div>
 </div>
   </div>
   <div class="col col-gen col-color-dark" id="contactsec"><h3 class="h-margin">Contact Me</h3>
