--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 hoverdiv">
     <div class="hovereffect">
-        <img class="img-responsive" src="../Portfolio Website/img/fpcsmall.jpg" alt="">
+        <img class="img-responsive" src="../../img/fpcsmall.jpg" alt="">
         <div class="overlay">
            <a class="info" href="https://50plusclub.neocities.org/" target="_blank">Washington 50 Plus Club<br><p class="base-p">Website Design</p></a>
         </div>
