--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Brandon Loehlein | Web Designer</title>
   </head>
   <body id="bootstrap-override">
-  <button onclick="topFunction()" id="Btt" class="btt" title="Go to top">Back To Top</button>
+  <button onclick="topFunction()" id="Btt" class="btt" title="Go to top"><span class="btt-arrow"></span></button>
    <nav class="navbar navbar-dark navbar-expand-md nav-color nav-border" id="navbarid">
    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
