--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <body id="bootstrap-override">
   <button onclick="topFunction()" id="Btt" class="btt" title="Go to top"><span class="btt-arrow"></span></button>
    <nav class="navbar navbar-dark navbar-expand-md nav-color nav-border" id="navbarid">
+   <a class="navbar-brand" href="#topsec" onclick="topFunction()"><img class="img-logo" src="../../img/logo.png" alt="Logo"></a>
    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
    <div class="collapse navbar-collapse" id="collapsibleNavbar">
    <ul class="navbar-nav">
-   <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#topsec" onclick="topFunction()">HOME</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#skillssec">SKILLS</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#aboutsec">ABOUT</a></li>
    <li class="nav-item"><a class="nav-link nav-link-color scroll-link" href="#portfoliosec">PORTFOLIO</a></li>
