--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="bootstrap/css/custom.css">
     <title>Brandon Loehlein | Web Designer</title>
+	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+	<link rel="icon" href="favicon.png" type="image/x-icon">
   </head>
   <body id="bootstrap-override">
   <button onclick="topFunction()" id="Btt" class="btt" title="Go to top"><span class="btt-arrow"></span></button>
