--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="col col-gen col-color-dark">
                 <h3 class="h-margin h-padding-b">Who I Am</h3>
                 <div class="div-center div-p-b">
-                    <p class="bs-p-concise bs-p-lg">I'm twenty two years old and have been studying web design for six years now. I started at the age of sixteen, and almost instantly fell in love with code and what you could do with it. My first job was a year later - and certainly
+                    <p class="bs-p-concise bs-p-lg">I'm twenty three years old and have been studying web design for seven years now. I started at the age of sixteen, and almost instantly fell in love with code and what you could do with it. My first job was a year later - and certainly
                         rough around the edges - but successful. Since then, I've been practicing and improving consistently. Following High School, I took a year away from studies to work and support my late grandmother before continuing on into College,
                         where I took courses for two years in order to get a certificate in Web Design.</p>
                 </div>
